Fixed bug that only allowed you to edit bg color once

--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
 </head>
 
 <body>
-  <header>
-    Modern Drawing Website
-  </header>
+  <header><h1>DaileeNotes</h1></header>
 
-  <label for="canvasColorPicker">Canvas Color:</label>
-  <input type="color" id="canvasColorPicker" value="#ffffff">
-  
-  </nav class='attributes'>
+  <nav class='attributes'>
+    <label for="canvasColorPicker">Background Color:</label>
+    <input type="color" id="canvasColorPicker" value="#ffffff">
+    
     <label for="colorPicker">Pen Color:</label>
     <input type="color" id="colorPicker" value="#000000">
 
